# moss

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  README.md  README_zh.md  app.py  dockerfile  pyproject.toml  requirements.txt
agent_core/: core.py  hass_mcp.py  prompts.py  tools.py
agents/: agents.py  core.py  prompts.py  tools.py
config/: conf.py  config.example.yaml  language_dict.json
core/: async_speech_recognizer.py  audio_manager.py  conversation_manager.py  keyword_detector.py  llm_streamer.py  speech_recognizer.py  tts_streamer.py
speech/: player.py  tools.py  tts.py
utils/: audio_utils.py  text_queue.py
