[project]
name = "moss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use>=0.5.4",
    "duckduckgo-search>=8.1.1",
    "httpx>=0.28.1",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.68",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-mcp-tools>=0.2.10",
    "langchain-openai>=0.3.27",
    "langchain-tavily>=0.2.7",
    "langgraph>=0.5.1",
    "lxml>=6.0.0",
    "mcp-proxy>=0.8.2",
    "mcp[cli]>=1.10.1",
    "nltk>=3.9.1",
    "numpy>=2.3.1",
    "openai-agents>=0.1.0",
    "playwright>=1.53.0",
    "pyowm>=3.3.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "setuptools>=80.9.0",
    "sherpa-onnx>=1.12.4",
    "sounddevice>=0.5.2",
]
